--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -904,6 +904,19 @@
         }
       },
       {
+        "file": "pages/business-setup.css",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/business-setup-dist.css"
+        }
+      },
+      {
+        "file": "pages/business-setup.scss",
+        "config": {
+          "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/business-setup.css"
+        }
+      },
+      {
         "file": "pages/home.scss",
         "config": {
           "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/home.css"
