--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -904,6 +904,12 @@
         }
       },
       {
+        "file": "pages/about-us.scss",
+        "config": {
+          "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/about-us.css"
+        }
+      },
+      {
         "file": "pages/business-setup.css",
         "config": {
           "autoCompile": true,
