--- a/assets/scss/prepros.config
+++ b/assets/scss/prepros.config
@@ -910,6 +910,12 @@
         }
       },
       {
+        "file": "pages/affliated-services.scss",
+        "config": {
+          "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/affliated-services.css"
+        }
+      },
+      {
         "file": "pages/business-setup.css",
         "config": {
           "autoCompile": true,
@@ -920,6 +926,12 @@
         "file": "pages/business-setup.scss",
         "config": {
           "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/business-setup.css"
+        }
+      },
+      {
+        "file": "pages/contact.scss",
+        "config": {
+          "customOutput": "C:/Users/PC/OneDrive/Documents/OUT WORK/createbiz/assets/css/pages/contact.css"
         }
       },
       {
